/***********************************************************************
 X3 ChangeLog

2006-12-02  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fix to levels command (- were missing)

	* src/tools.c: fix warning

	* src/common.h: fix warning

	* src/chanserv.help: update online help url, changed help general to
	use new $! command char replacement code.

	* src/hash.c: fix warning when geoip is off

	* src/helpfile.c: add new '$!' code for chanserv's current trigger
	char in help files

2006-12-01  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: Raisk pointed out that mdelop and friends dont work
	on users of non-standard access level such as 201. Fixed this by
	changing mdelop and friends to work on the range of access levels.
	Added a LEVELS command.

	* src/chanserv.h: corrected PEON access defines such that 1-150 is
	peon instead of 100-150 with 1-99 being undefined.

	* src/chanserv.help: help for new LEVELS command

	* src/helpfile.c: Improved table functions so that it automatically
	right-justifies numerical columns.

	* src/tools.c: Added helper functions str_is_number and msnprintf (an
	auto-mallocing printf function)

	* src/common.h: defines and defines for msnprintf and str_is_number


2006-11-30  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: Modified .myaccess such that if you give it your own
	account when you are not a helper, it still works. (Requested by
	Jigsy)

	* src/nickserv.help: Corrected the help file to feed oregister based
	on email_required instead of email_enabled

	* src/nickserv.c: Fix & close sf bug 1584057 (hidden_host with no dots
	causes crash in set if no title) thanks xanjunior

2006-10-18  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.c: Minor cosmetic error noticed by Raisk. If doing an
	opserv WHOIS from another service (when bound), the channels reply
	would come from o3 instead of that service.

2006-10-18  Neil Spierling  <sirvulcan@gmail.com>
